Bug 1004814 - console.time/timeEnd work in workers. r=bz, a=sledru