dom/tests/browser/worker_bug1004814.js
@@ -1,0 +1,6 @@
+onmessage = function(evt) {
+  console.time('bug1004814');
+  setTimeout(function() {
+    console.timeEnd('bug1004814');
+  }, 200);
+}
